--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,8 +7,12 @@
 body {
   margin: 0;
   font-family: 'Electrolize', sans-serif;
+  overflow: hidden;
 }
 .ant-btn-primary{
   background-color: #1677ff;
   color: #fff;
+}
+.categories::-webkit-scrollbar{
+  display: none;
 }
